replace ranch to 1.4.0

--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,4 @@
 {deps, [
 	{cowlib, ".*", {git, "https://github.com/callsign-core/cowlib.git", "1.0.0_otp20"}},
-	{ranch, ".*", {git, "https://github.com/callsign-core/ranch.git", "1.0.0_otp20"}}
+	{ranch, ".*", {git, "https://github.com/ninenines/ranch.git", "1.4.0"}}
 ]}.
